--- a/client/app/members/members.html
+++ b/client/app/members/members.html
@@ -7,8 +7,8 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Page Heading
-                    <small>Secondary Text</small>
+                <h1 class="page-header">Members
+                    <small>Take a look at your next team member</small>
                 </h1>
             </div>
         </div>
@@ -18,12 +18,12 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive" src="assets/images/musician.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Member 1</h3>
-                <h4>Career</h4>
+                <h3>Member 1: Valeria</h3>
+                <h4>Career: Music</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
                 <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
@@ -36,12 +36,12 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive" src="assets/images/actress.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Member 2</h3>
-                <h4>Career: Engineering</h4>
+                <h3>Member 2: Rebbeca</h3>
+                <h4>Career: Actress</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
                 <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
@@ -54,18 +54,17 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive" src="assets/images/doctor.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Project Three</h3>
-                <h4>Subheading</h4>
+                <h3>Member 3: Frank</h3>
+                <h4>Career: Medic</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
                 <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
-
         <hr>
 
         <!-- Project Four -->
@@ -73,12 +72,12 @@
 
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                    <img style="max-width:300px; margin-top: -7px;"class="img-responsive" src="assets/images/oscar.png" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Project Four</h3>
-                <h4>Subheading</h4>
+                <h3>Member 3: Oscar</h3>
+                <h4>Career: Biomedic</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
                 <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
@@ -91,12 +90,12 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                    <img style="max-width:300px; margin-top: -7px;" class="img-responsive" src="assets/images/image.png" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Project Five</h3>
-                <h4>Subheading</h4>
+                <h3>Member 5: Carlos</h3>
+                <h4>Career: Business</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
                 <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
@@ -133,10 +132,6 @@
                 </ul>
             </div>
         </div>
-        <!-- /.row -->
-
         <hr>
 
-        
-
-    </div>
+</div>
