--- a/client/app/projects/projects.html
+++ b/client/app/projects/projects.html
@@ -24,11 +24,18 @@
   <div class="row">
     <div class="col-md-2">
       <div class="list-group">
-        <button type="button" class="list-group-item btn-block">Healthcare</button>
+        <button type="button" class="list-group-item btn-block">Arts</button>
+        <button type="button" class="list-group-item btn-block">Business</button>
+        <button type="button" class="list-group-item btn-block">Community</button>
+        <button type="button" class="list-group-item btn-block">Design</button>
+        <button type="button" class="list-group-item btn-block">Education</button>
+        <button type="button" class="list-group-item btn-block">Entertainment</button>
+        <button type="button" class="list-group-item btn-block">Environment</button>
+        <button type="button" class="list-group-item btn-block">Fashion</button>
         <button type="button" class="list-group-item btn-block">Gastronomy</button>
-        <button type="button" class="list-group-item btn-block">Software</button>
-        <button type="button" class="list-group-item btn-block">Electronics</button>
+        <button type="button" class="list-group-item btn-block">Music</button>
         <button type="button" class="list-group-item btn-block">Sports</button>
+        <button type="button" class="list-group-item btn-block">Technology</button>
       </div>
     </div>
 
